# Mado

./: .gitignore  Cargo.toml  LICENSE  NEXT.md  README.md  README_ja.md
packaging/icons/: mado-256.rgba
packaging/macos/: Info.plist  Mado.icns
packaging/windows/: Mado.wxs  install-associations.ps1  uninstall-associations.ps1
scripts/: build-macos-app.ps1
src/: cli.rs  config.rs  lib.rs  main.rs
src/nvim/: mod.rs  process.rs  redraw.rs  rpc.rs
src/platform/: macos.rs  mod.rs
src/ui/: app.rs  grid.rs  ime.rs  input.rs  mod.rs  rect.wgsl  renderer.rs
tests/: nvim_integration.rs  redraw_protocol.rs  rpc_protocol.rs
