[package]
name = "mado"
version = "0.1.0"
edition = "2024"
description = "A minimal Neovim GUI client"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rmpv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
winit = "0.30.12"
wgpu = "29.0"
glyphon = "0.11"
pollster = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.2.2", features = ["NSArray", "NSObject", "NSString", "NSURL"] }
